# vm-ubuntu

./: .gitignore  CMakeLists.txt  build.sh  build_proto.sh  kill_log_service.sh  kill_server.sh  main.cpp  record.md  start_server.sh  test.sql
3rd/skynet/3rd/lua/: lua
3rd/skynet/examples/: config.echo  main_mysql.lua  pconfig  pmain.lua
3rd/skynet/examples/echo/: main.lua
Logservice/: CMakeLists.txt  LogMessage.pb.cc  LogMessage.pb.h  main.cpp
base/: CMakeLists.txt  acceptor.cpp  acceptor.h  asyncLogger.cpp  basepoller.cpp  basepoller.h  buffer.cpp  buffer.h  callback.h  channel.cpp  connector.cpp  connector.h  countLatch.cpp  currentThread.cpp  currentThread.h  date.cpp  date.h  defaultPoller.cpp  define.h  endian.h  epollPoller.cpp  epollPoller.h  eventLoop.cpp  eventLoop.h  eventLoopThread.cpp  eventLoopThread.h  eventLoopThreadPool.cpp  eventLoopThreadPool.h  fileutils.cpp  inetAddress.cpp  inetAddress.h  logfile.cpp  logfile.h  logging.cpp  logstream.cpp  processInfo.cpp  socket.cpp  socket.h  socketsOps.cpp  tcpConnection.cpp  (+14 more)
config/: Entry.json  List.json
cpptest/: app  build.sh  cpp_test.cpp  cpp_test.h
ds/: CMakeLists.txt  ds.h
game/common/: CMakeLists.txt  base_server.cpp  base_server.h
game/entry/: CMakeLists.txt  entry.proto  entry_server.cpp  entry_server.h  main.cpp
game/list/: CMakeLists.txt  list_server.cpp  list_server.h  main.cpp
game/proto/: entry.pb.cc  entry.pb.h  list.pb.cc  list.pb.h  list.proto
include/3rd/skynet/3rd/jemalloc/include/jemalloc/internal/: jemalloc_internal_defs.h
include/base/: asyncLogger.h  blockqueue.h  channel.h  countLatch.h  define.h  eventLoop.h  fileutils.h  logging.h  logstream.h  processInfo.h  socketsOps.h  threadPool.h  timer.h  timerId.h  timezone.h
include/sonenet/: define.h  msg.h  service.h  sonenet.h  worker.h
include/utils/: redis.h  thread.h  threadPool.h
libserver/: CMakeLists.txt  GameThread.cpp  GameThread.h
server/: CMakeLists.txt  GameThread.cpp  GameThread.h  IDisposeable.h  README  ThreadObject.cpp  ThreadObject.h
shadowsocks/: bashrc  closevpn  shadowsocks.json  startvpn
sonenet/: CMakeLists.txt  define.h  msg.h  service.cpp  service.h  sonenet.cpp  sonenet.h  worker.cpp  worker.h
test/: CMakeLists.txt  LogMessage.pb.cc  LogMessage.pb.h  LogMessage.proto  entry.proto  test.cpp
utils/: CMakeLists.txt  noncopyable.h  random.cpp  random.h  thread.cpp  thread.h  threadPool.cpp  threadPool.h
